--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
-    "authors": [
-        {
-            "name": "Bastien LECERF",
-            "email": "lecerf.bastien@me.com"
+    "name": "bastienlecerf/projet_5",
+    "autoload": {
+        "psr-4": {
+            "Bastienlecerf\\Projet5\\": "src/"
         }
-    ]
+    },
+    "minimum-stability": "stable",
+    "require": {}
 }
