--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bastienlecerf/projet_5",
-    "license": "B.L",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Bastien Lecerf",
